# rust-text

./: .gitignore  Cargo.toml  readme.md
.zed/: tasks.json
src/: assets.rs  blink_manager.rs  command.rs  db.rs  editor.rs  lines.rs  main.rs  modal_manager.rs  paths.rs  scroll_manager.rs  search.rs  settings_manager.rs  status_bar.rs  text_element.rs  text_input.rs  theme_manager.rs  theme_selector.rs  title_bar.rs  views.rs
src/editor/: editor.rs  search.rs  status_bar.rs  theme_selector.rs  title_bar.rs
src/languages/markdown/: highlights.scm
src/languages/markdown-inline/: highlights.scm
src/views/: icon_button.rs  icons.rs  text_input.rs  tooltip.rs
src/views/text_input/: char_kind.rs  command.rs  lines.rs  scroll_manager.rs  syntax.rs  text_element.rs  text_input.rs
