[package]
name = "text"
description = "a text editor"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
unicode-segmentation = "1.12"
ropey = "1.6.1"
smallvec = "1.13.2"
futures = "0.3.31"
aho-corasick = "1.1.3"

# https://crates.io/crates/cargo-packager
[package.metadata.packager]
formats = ["app"]
product_name = "text"
identifier = "de.nullwire.text"
icons = ["assets/icon*.png"]
file_associations = [{ extensions = ["txt", "md"] }]
before-packaging-command = "cargo build --release"
