[package]
name = "text"
description = "a text editor"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
ropey = "1.6.1"
smallvec = "1.13.2"
futures = "0.3.31"
aho-corasick = "1.1.3"
rust-embed = "8.5.0"
strum = { version = "0.26", features = ["derive"] }
directories = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.95"
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "serde"] }

# https://crates.io/crates/cargo-packager
[package.metadata.packager]
formats = ["app"]
product_name = "text"
identifier = "de.nullwire.text"
icons = ["assets/icon*.png"]
file_associations = [{ extensions = ["txt", "md"] }]
before-packaging-command = "cargo build --release"
